# GPTuesday_Agents

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
READMEs/: agent_chat_message_history.md  agent_timing_stats.md  agents.md  basic_auth_solution.md  code_interpreter.md  db.md  docket_api.md  flask_commands.md  miscellaneous.md  open_api_tool.md  pinecone.md  plan_and_execute_agent.md  serp.md  set_up_render_db.md  useful_commands.md
agents/plan_and_execute_agent/callback_handlers/: custom_callback_handler.py
agents/plan_and_execute_agent/helpers/: save_agent_stats.py
agents/plan_and_execute_agent/tool_functions/: build_clio_query.py  run_clio_query.py  run_direct_clio_query.py
agents/plan_and_execute_agent/tools/: __init__.py  build_clio_query_tool.py  docket_api_tool.py  plan_and_execute_tool.py  run_clio_query_tool.py  vectorstore_tool.py
agents/rag_agent_2/callback_handlers/: plan_and_execute_callback_handler.py
basic_auth/: index.py
clients/: AuthClient.py  ChatHistoryPineconeClient.py  ClioDbClient.py  DbClient.py  PineconeClient.py
reference_sql/: agent_stats_schema.sql
routes/: call_code_interpreter.py  call_conversational_agent.py  call_conversational_rag_agent.py  call_conversational_rag_agent_2.py  call_hwchase17_conversational_agent.py  call_plan_and_execute_agent.py  test.py  test_streaming.py  verify_password.py
scratch/: VectorStoreRetrieverMemory.txt  billing.csv  kb.txt  scratch.txt
scripts/: __init__.py  add_to_pinecone_index.py  build_pinecone_index.py  delete_pinecone_index.py  main.py
(+14 files in other folders)
